--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -136,9 +136,9 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # FAIR Scheuler tunables
 #
 # CONFIG_PELT_UTIL_HALFLIFE_32 is not set
-CONFIG_PELT_UTIL_HALFLIFE_24=y
+# CONFIG_PELT_UTIL_HALFLIFE_24 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_16 is not set
-# CONFIG_PELT_UTIL_HALFLIFE_12 is not set
+CONFIG_PELT_UTIL_HALFLIFE_12=y
 # CONFIG_PELT_UTIL_HALFLIFE_10 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 
@@ -176,7 +176,7 @@ CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
-# CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
 CONFIG_STUNE_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
@@ -220,6 +220,7 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
@@ -1294,7 +1295,7 @@ CONFIG_XPS=y
 CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-# CONFIG_BPF_JIT is not set
+CONFIG_BPF_JIT=y
 # CONFIG_BPF_STREAM_PARSER is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
