--- a/arch/arm64/configs/gulch_defconfig
+++ b/arch/arm64/configs/gulch_defconfig
@@ -652,10 +652,8 @@ CONFIG_CMA=y
 CONFIG_CMA_AREAS=7
 CONFIG_ZPOOL=y
 # CONFIG_ZBUD is not set
-# CONFIG_Z3FOLD is not set
-CONFIG_ZSMALLOC=y
-# CONFIG_PGTABLE_MAPPING is not set
-# CONFIG_ZSMALLOC_STAT is not set
+CONFIG_Z3FOLD=y
+# CONFIG_ZSMALLOC is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
@@ -664,6 +662,7 @@ CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
 # CONFIG_PROCESS_RECLAIM is not set
+CONFIG_VMSTAT_INTERVAL=20
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -1490,8 +1489,10 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEDUP is not set
 # CONFIG_ZRAM_WRITEBACK is not set
+CONFIG_DEFAULT_ZRAM_Z3FOLD=y
+CONFIG_ZRAM_DEFAULT_BACKEND="z3fold"
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
